--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "autoload": {
-        "psr-4": {"DiaoJinLong\LaravelVueAdmin\\": "src/"}
+        "psr-4": {"DiaoJinLong\\LaravelVueAdmin\\": "src/"}
     },
     "minimum-stability": "dev",
     "require": {}
