--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
 	"require": {
 		"php": ">=7.0.0",
-        "godruoyi/php-snowflake": "1.0.10"
+        "godruoyi/php-snowflake": "1.0.*"
     },
     "authors": [
         {
